# wx_template

./: .gitignore  CMakeLists.txt  mainwinodw.cpp  mainwinodw.h  res.rc  wxglade.wxg
